# vast

./: .gitignore  CMakeLists.txt  common.pri  index.html  main.cpp  params.json  vast.pro
GLWidget/: GLCommon.cpp  GLCommon.hpp  GLCrossHair.cpp  GLCrossHair.hpp  GLLookupTable.cpp  GLLookupTable.hpp  GLOrientationHandler.cpp  GLOrientationHandler.hpp  GLShaderCode.hpp  GLShaderHandler.cpp  GLShaderHandler.hpp  GLTextureHandler.cpp  GLTextureHandler.hpp  QGLWidgetImplementation.cpp  QGLWidgetImplementation.cpp~  QGLWidgetImplementation.hpp
QImageWidget/: QImageWidgetImplementation.cpp  QImageWidgetImplementation.hpp  QMemoryHandler.cpp  QMemoryHandler.hpp  QOrientationHandler.cpp  QOrientationHandler.hpp  QtWidgetCommon.cpp  QtWidgetCommon.hpp
VTKImageWidget/: VTKImageWidgetImplementation.cpp  VTKImageWidgetImplementation.hpp  VolumeHandler.cpp  VolumeHandler.hpp
debian/: changelog  control  rules  vast-correlationplotter.install  vast-histogram.install  vast-maskedit.install  vast-orientationcorrection.install  vast-plugin-voxelop.install  vast-propertytool.install  vast-timeplotter.install  vast-widget-qt.install  vast-widget-qtgeom.install  vast-widget-vtk.install  vast.desktop  vast.install  vast.links  vast.menu  vast.mime
doc/: .buildinfo  genindex.html  imagestack.html  index.html  introduction.html  objects.inv  openingimages.html  pluginarch.html  savingimages.html  screenshotfunction.html  search.html  searchindex.js  techinfo.html  zmap.html
documentation/: CMakeLists.txt
documentation/source/: conf.py  fileformats.rst  imagestack.rst  index.rst  introduction.rst  openingimages.rst  screenshotfunction.rst  techinfo.rst
forms/: aboutDialog.ui  fileOpenWidget.ui  helpDialog.ui  imageStackWidget.ui  isisViewerMain.ui  keyCommands.ui  loggingDialog.ui  mainwindow.ui  plotting.ui  pluginInformation.ui  preferences.ui  scalingDialog.ui  scalingWidget.ui  sliderWidget.ui  start.ui  voxelInformationWidget.ui
main/: main.cpp  main.pro
plugin/: ProcessTest.hpp
plugins/: CMakeLists.txt  common.pri  plugins.pro  vastPlugin_Test.cpp  vastPlugin_TimePlotter.hpp
plugins/CorrelationPlotter/: CMakeLists.txt  CorrelationPlotter.cpp  CorrelationPlotter.hpp  vastPlugin_CorrelationPlotter.cpp
plugins/CorrelationPlotter/forms/: correlationPlotter.ui
plugins/CorrelationPlotter/resources/: correlationplotter.qrc
plugins/Histogram/: CMakeLists.txt  HistogramDialog.cpp  HistogramDialog.hpp  vastPlugin_Histogram.cpp
plugins/Histogram/forms/: histogramDialog.ui
plugins/Histogram/resources/: histogram.qrc
plugins/MaskEdit/: CMakeLists.txt  CreateMaskDialog.cpp  CreateMaskDialog.hpp  MaskEdit.cpp  MaskEdit.hpp  vastPlugin_MaskEdit.cpp
plugins/MaskEdit/forms/: createMask.ui  maskEdit.ui
plugins/MaskEdit/resources/: maskedit.qrc  maskeditLUT
plugins/OrientationCorrection/: CMakeLists.txt  OrientationCorrection.cpp  OrientationCorrection.hpp  vastPlugin_OrientationCorrection.cpp
plugins/OrientationCorrection/forms/: orientationcorrection.ui
plugins/ProfilePlotter/: CMakeLists.txt  Plot.cpp  Plot.hpp  PlotterDialog.cpp  PlotterDialog.hpp  vastPlugin_ProfilePlotter.cpp  vastPlugin_ProfilePlotter.hpp
plugins/ProfilePlotter/forms/: plotting.ui
plugins/ProfilePlotter/resources/: timeplotter.qrc
plugins/PropertyTool/: CMakeLists.txt  PropertyTool.pro  PropertyToolDialog.cpp  PropertyToolDialog.hpp  vastPlugin_PropertyTool.cpp
plugins/PropertyTool/forms/: propertyToolDialog.ui
plugins/PropertyTool/resources/: propertytool.qrc
plugins/PythonInterpreter/: CMakeLists.txt  PythonBridge.cpp  PythonBridge.hpp  PythonInterpreterDialog.cpp  PythonInterpreterDialog.hpp  PythonStdIORedirect.cpp  PythonStdIORedirect.hpp  vastPlugin_PythonInterpreter.cpp
plugins/PythonInterpreter/forms/: pythonInterpreter.ui
plugins/PythonInterpreter/resources/: pythoninterpreter.qrc
plugins/TimePlotter/: CMakeLists.txt  PlotterDialog.cpp  PlotterDialog.hpp  vastPlugin_TimePlotter.cpp  vastPlugin_TimePlotter.hpp
plugins/TimePlotter/cmake/Modules/: FindFFTW3.cmake
plugins/TimePlotter/forms/: plotting.ui
plugins/VoxelOperation/: CMakeLists.txt  VoxelOp.hpp  VoxelOperationDialog.cpp  VoxelOperationDialog.hpp  vastPlugin_VoxelOperation.cpp
plugins/VoxelOperation/forms/: voxelOperation.ui
plugins/itkRegistration/: CMakeLists.txt  RegistrationDialog.cpp  RegistrationDialog.hpp  itkAdapter.hpp  itkAdapter_impl.hpp  vastPlugin_itkRegistration.cpp
plugins/itkRegistration/forms/: itkRegistrationDialog.ui
plugins/itkRegistration/resources/: itkRegistration.qrc
resources/: vast.xpm  viewer.qrc
view_widgets/: CMakeLists.txt  common.hpp  common.pri  view_widgets.pro
view_widgets/QGeometricalImageWidget/: CMakeLists.txt  QGeomWidget.cpp  QGeomWidget.hpp  QGeometricalImageWidget.pro  geomhandler.cpp  geomhandler.hpp
view_widgets/QImageWidget/: CMakeLists.txt  QImageWidget.pro  QImageWidgetImplementation.cpp  QImageWidgetImplementation.hpp  QMemoryHandler.hpp  QOrientationHandler.cpp  QOrientationHandler.hpp
view_widgets/VTKImageWidget/: CMakeLists.txt  ImageComponents.cpp  ImageComponents.hpp  OptionWidget.cpp  OptionWidget.hpp  VTKImageWidgetImplementation.cpp  VTKImageWidgetImplementation.hpp  VolumeHandler.cpp  VolumeHandler.hpp
view_widgets/VTKImageWidget/forms/: option_widget.ui
view_widgets/VTKImageWidget/resources/: vtkwidget.qrc
viewer/: Color.cpp  Color.hpp  DataContainer.cpp  DataContainer.hpp  ImageHolder.cpp  ImageHolder.cpp~  ImageHolder.hpp  ImageHolder.hpp~  ImageOps.cpp  MainWindow.cpp  MainWindow.cpp~  MainWindow.hpp  MainWindow.hpp~  MainWindowBase.cpp  MainWindowBase.hpp  MainWindowUIInterface.cpp  MainWindowUIInterface.hpp  PluginInterface.h  PluginInterface.hpp  PluginLoader.cpp  PluginLoader.hpp  QPlottingDialog.cpp  QPlottingDialog.hpp  QPreferenceHandler.cpp  QPreferenceHandler.hpp  QPreferencesDialog.cpp  QPreferencesDialog.hpp  QViewerCore.cpp  QViewerCore.hpp  QWidgetImplementationBase.cpp  QWidgetImplementationBase.hpp  SubViewWindow.cpp  SubViewWindow.hpp  ViewerCoreBase.cpp  ViewerCoreBase.cpp~  ViewerCoreBase.hpp  ViewerCoreBase.hpp~  (+47 more)
(+60 files in other folders)
